test/errors/type/bool/tobool.yasl

mt.lookup(true, .tobool)(1)
